--- a/data/project.html
+++ b/data/project.html
@@ -24,7 +24,7 @@
                 <h3>on <br> “Art Of Horticulture”</h3>
                 
                 <h5>Submitted by</h5>
-                <p>T. SRI SAI HARSHINI (212U1A05B2) <br></p>
+                <p>T. AFSANA BEGUM (212U1A05B3) <br></p>
                 Under the Esteemed Guidance Of <br>
                 <p><b>Mr. A. RAMESH. M.TECH.,</b> <br></p>
                 <p>Assistant Professor <br></p>
